@@ -1,4 +1,5 @@
 {{$NEXT}}
+   - add support for deadletter jobs from flowable
 
 0.1254  2018-04-25 11:16:46 CEST
    - add option timeout for client
